feat: CompletableFuture 기반 비동기 병렬 검색 엔진 v19 구현 (Latency 65% 절감)